Section principal e próximos eventos concluído

--- a/index.html
+++ b/index.html
@@ -25,5 +25,151 @@
       </ul>
     </div>
   </header>
+
+  <section class="container grid grid-template-col-4">
+    <img src="assets/Banner1.png" alt="Banner">
+    <img src="assets/Banner2.png" alt="Banner">
+    <img src="assets/Banner3.png" alt="Banner">
+    <img src="assets/Banner4.png" alt="Banner">
+  </section>
+
+  <div class="categorias-destaque container grid grid-template-col-2 gap-24">
+    <div class="categoria grid gap-24">
+      <h2>CATEGORIAS</h2>
+      <div class="grid grid-template-col-2">
+        <span class="bg-yellow">SHOWS</span>
+        <span class="bg-yellow">ARTE</span>
+        <span class="bg-orange">TEATRO</span>
+        <span class="bg-orange">FOTOGRAFIA</span>
+        <span class="bg-lavender">FESTIVAIS</span>
+        <span class="bg-lavender">TECNOLOGIA</span>
+        <span class="bg-green">CINEMA</span>
+        <span class="bg-green">DESIGN</span>
+      </div>
+    </div>
+
+    <div class="destaque grid gap-35">
+      <div class="flex justify-content-space-between align-items-center">
+        <h2>DESTAQUES</h2>
+        <img src="assets/divisor.png" alt="Divisor">
+        <img src="assets/seta-esquerda.png" alt="Seta para a esquerda">
+        <img src="assets/seta-direita.png" alt="Seta para a direita">
+      </div>
+
+      <div class="rectangle-destaque">
+        <img src="assets/Rectangle-destaque.png" alt="Imagem retangular de destaque">
+      </div>
+    </div>
+  </div>
+
+  <div class="next-events container">
+    <h2>PRÓXIMOS EVENTOS</h2>
+    <div class="grid grid-template-col-4 grid-template-col-2 gap-24">
+      <div class="item grid gap-8">
+        <img src="assets/Card1@2x.png" alt="Card item">
+        <h3>Festival de Luzes</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card2@2x.png" alt="Card item">
+        <h3>Festa Latina</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card3@2x.png" alt="Card item">
+        <h3>Festival de Cinema</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card4@2x.png" alt="Card item">
+        <h3>Corrida pela Saúde</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card5@2x.png" alt="Card item">
+        <h3>Feira de Animes</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card6@2x.png" alt="Card item">
+        <h3>Festival Multicores</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card7@2x.png" alt="Card item">
+        <h3>Dia do Balonismo</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+      <div class="item grid gap-8">
+        <img src="assets/Card8@2x.png" alt="Card item">
+        <h3>Quinta 3D</h3>
+        <span>DD/MM/YYYY</span>
+        <div class="agroup flex justify-content-space-between align-items-center">
+          <div>
+            <span>São Paulo | SP</span>
+          </div>
+          <div>
+            <a href="">VER</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
