--- a/index.html
+++ b/index.html
@@ -170,6 +170,87 @@
         </div>
       </div>
     </div>
+    <div class="ver-mais">
+      <a href="">VER MAIS</a>
+    </div>
   </div>
+
+  <aside class="container">
+    <h3>COLOQUE NA SUA AGENDA!</h3>
+    <div class="aside-container">
+      <div class="card">
+        <img src="assets/Card1.png" alt="Card">
+        <div class="card-gray">
+          <h4>AGOSTO</h4>
+          <p>18 (QUINTA)</p>
+          <p>20:30</p>
+        </div>
+        <div class="card-gray-ligth">
+          <h4>QUINTA 3D</h4>
+          <a href="">Avise-me</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/Card2.png" alt="Card">
+        <div class="card-gray">
+          <h4>AGOSTO</h4>
+          <p>16 (TERÇA)</p>
+          <p>20:30</p>
+        </div>
+        <div class="card-gray-ligth">
+          <h4>Festival de Cinema</h4>
+          <a href="">Avise-me</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/Card3.png" alt="Card">
+        <div class="card-gray">
+          <h4>AGOSTO</h4>
+          <p>18 (QUINTA)</p>
+          <p>8 - 12:00</p>
+        </div>
+        <div class="card-gray-ligth">
+          <h4>Dia de Balonismo</h4>
+          <a href="">Avise-me</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/Card4.png" alt="Card">
+        <div class="card-gray">
+          <h4>AGOSTO</h4>
+          <p>18 (QUINTA)</p>
+          <p>20:30</p>
+        </div>
+        <div class="card-gray-ligth">
+          <h4>Hard Rockers</h4>
+          <a href="">Avise-me</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/Card5.png" alt="Card">
+        <div class="card-gray">
+          <h4>AGOSTO</h4>
+          <p>18 (QUINTA)</p>
+          <p>20:30</p>
+        </div>
+        <div class="card-gray-ligth">
+          <h4>Balé Municipal</h4>
+          <a href="">Avise-me</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/Card6.png" alt="Card">
+        <div class="card-gray">
+          <h4>AGOSTO</h4>
+          <p>18 (QUINTA)</p>
+          <p>16:00</p>
+        </div>
+        <div class="card-gray-ligth">
+          <h4>Festival Multicores</h4>
+          <a href="">Avise-me</a>
+        </div>
+      </div>
+    </div>
+  </aside>
 </body>
 </html>
