Projeto concluído com sucesso

--- a/index.html
+++ b/index.html
@@ -252,5 +252,65 @@
       </div>
     </div>
   </aside>
+
+  <footer class="bg-black">
+    <div class="agroup-footer container grid">
+      <div>
+        <h5>Encontre Eventos</h5>
+        <nav>
+          <a href="">Esta semana</a>
+          <a href="">Este fim de semana</a>
+          <a href="">Este mês</a>
+          <a href="">Este trimestre</a>
+        </nav>
+      </div>
+      <div>
+        <h5>Cidades</h5>
+        <nav>
+          <a href="">São Paulo</a>
+          <a href="">Rio de Janeiro</a>
+          <a href="">Porto Alegre</a>
+          <a href="">Salvador</a>
+        </nav>
+      </div>
+      <div>
+        <h5>Categorias</h5>
+        <nav>
+          <a href="">Shows</a>
+          <a href="">Arte</a>
+          <a href="">Teatro</a>
+          <a href="">Fotografia</a>
+          <a href="">Festivais</a>
+          <a href="">Design</a>
+          <a href="">Cinema</a>
+          <a href="">Tecnologia</a>
+        </nav>
+      </div>
+      <div>
+        <h5>Sobre nós</h5>
+        <nav>
+          <a href="">Carreiras</a>
+          <a href="">História</a>
+          <a href="">Contato</a>
+          <a href="">Localização</a>
+        </nav>
+      </div>
+      <div>
+        <h5>Anuncie seu evento</h5>
+        <nav>
+          <a href="">Música e festas</a>
+          <a href="">Cursos e workshops</a>
+          <a href="">Esportivo</a>
+          <a href="">Congresso</a>
+          <a href="">Religioso</a>
+          <a href="">Online</a>
+        </nav>
+      </div>
+      <div>
+        <img src="assets/logo.png" alt="Logo Culturama">
+        <p>Desenvolvido por <strong>Lucas Emanuel</strong></p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
